adjusting margin to prevent overlapping

--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -1,3 +1,3 @@
 .content {
-    margin: 15px 0 0;
+    margin: 80px 0 0;
 }
